updated the .getLast and First methods